fix(layout): add padding-bottom to main to avoid white space before footer

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,5 +2,5 @@
   background-color: #ecf0f1;
   margin-top: 0.5rem;
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
 }
